--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,18 @@
 # Core dependencies
 requests==2.31.0
 pandas==2.1.3
-numpy==1.26.2
+# numpy==1.26.2 # Let pandas define this
 python-dotenv==1.0.0
 tqdm==4.66.1
-lxml==4.9.3
+lxml==4.9.3 # Original version
 
 # Web scraping - by preference order
-crawl4ai==0.3.2
-pyppeteer==1.0.2
+# crawl4ai==0.3.2 # Let pip attempt to find a compatible version
 selenium==4.15.2
+playwright==1.44.0
 beautifulsoup4==4.12.2
 webdriver-manager==4.0.1
-scrapinggraph-ai==0.1.5
+# scrapinggraph-ai==0.1.5  # commented out because unavailable on PyPI
 
 # Data processing and visualization
 matplotlib==3.8.2
@@ -21,7 +21,7 @@ scikit-learn==1.3.2
 # Other dependencies
 g4f==0.5.0.1
 importlib-metadata==8.6.1
-litellm==1.65.0
+litellm==1.65.0 # Original version
 openai==1.69.0
 pip==25.1.1
 zipp==3.21.0
