--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ beautifulsoup4==4.12.2
 webdriver-manager==4.0.1
 # scrapinggraph-ai==0.1.5  # commented out because unavailable on PyPI
 undetected-chromedriver==3.5.5
+curl_cffi==0.11.1
 
 # Data processing and visualization
 matplotlib==3.8.2
